# rules_clojure

./: BUILD  MODULE.bazel  repositories.bzl  rules.bzl  toolchains.bzl
rules/: binary.bzl  compile.bzl  library.bzl  repl.bzl  test.bzl
